Do not depend on javax.xml.bind for decoding Base64