@@ -35,6 +35,7 @@ import com.redhat.rhn.manager.action.ActionChainManager;
 import com.redhat.rhn.manager.action.ActionManager;
 
 import java.util.ArrayList;
+import java.util.Base64;
 import java.util.Date;
 import java.util.HashMap;
 import java.util.HashSet;
@@ -42,7 +43,6 @@ import java.util.List;
 import java.util.Map;
 import java.util.Set;
 import java.util.stream.Collectors;
-import javax.xml.bind.DatatypeConverter;
 
 /**
  * @xmlrpc.namespace actionchain
@@ -472,7 +472,7 @@ public class ActionChainHandler extends BaseHandler {
 
         ScriptActionDetails script = ActionManager.createScript(
                 uid, gid, (long) timeout, new String(
-                        DatatypeConverter.parseBase64Binary(scriptBody)));
+                        Base64.getDecoder().decode(scriptBody)));
         try {
             return ActionChainManager
                     .scheduleScriptRuns(loggedInUser, systems,
